Shorten configuration